--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<meta charset="UTF-8">
+<title>搜索引擎跳转</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>标题1</h1>
-    <img src="img.png" alt="img" title="img1" height="100"/>
-    <a href="https://www.baidu.com"><img src="img.png"></a> <br>
-    <a href="https://www.baidu.com">baidu</a>
-    <form>
-        输入:<input type="text" placeholder="测试输入"> <br>
-        选择:1 <input type="radio" name="sz"> 2 <input type="radio" name="sz"> <br>
-        选择:1 <input type="checkbox"> 2 <input type="checkbox"> <br>
-        <input type="submit" value="提交测试">
-        <input type="reset" value="重新提交">
-    </form>
+
+<form>
+  <label for="search_engine">选择搜索引擎:</label>
+  <select id="search_engine" name="search_engine">
+    <option value="https://www.baidu.com/s?wd=">百度</option>
+    <option value="https://www.google.com.hk/search?q=">谷歌</option>
+    <option value="https://www.bing.com/search?pglt=129&q=">必应</option>
+  </select><br><br>
+  <label for="search_text">输入搜索内容:</label><br>
+  <input type="text" id="search_text" name="search_text"><br><br>
+  <input type="button" onclick="search()" value="搜索">
+</form>
+
+<script>
+function search() {
+  var search_engine = document.getElementById("search_engine").value;
+  var search_text = document.getElementById("search_text").value;
+  window.location.href = search_engine + search_text;
+}
+</script>
+
 </body>
 </html>
